refactor: delegate message processing to Clojure pipeline